[package]
name = "xnetwork"
version = "0.1.0"
authors = ["Sevag Hanssian <sevagh@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "0.4"
lazy_static = "1.4.0"
linked_hash_set = "0.1.3"
partitions = "0.2.4"
